--- a/services/genome-nexus-vep/Dockerfile
+++ b/services/genome-nexus-vep/Dockerfile
@@ -1,4 +1,4 @@
-FROM maven:3.5.4
+FROM maven:3-openjdk-11
 RUN mkdir /genome-nexus-vep
 RUN git clone https://github.com/genome-nexus/genome-nexus-vep /genome-nexus-vep
 WORKDIR /genome-nexus-vep
@@ -6,7 +6,7 @@ RUN mvn -DskipTests clean install
 
 FROM ensemblorg/ensembl-vep:release_98.3
 USER root
-RUN apt-get update && apt-get -y install openjdk-8-jre
+RUN apt-get update && apt-get -y install openjdk-11-jre-headless
 COPY --from=0 /genome-nexus-vep/target/vep_wrapper*.jar /opt/vep/src/ensembl-vep/vep_wrapper.jar
 USER vep
 WORKDIR /opt/vep/src/ensembl-vep/
