fix genome nexus

--- a/config/ensembl_rest.conf
+++ b/config/ensembl_rest.conf
@@ -17,7 +17,7 @@ jsonp=1
 <Model::Registry>
   ###### Database settings. Use if you want to connect to a single database instance. Common options are given below
   
-  host = genomenexus_ensembl_mysql
+  host = ensembl-mysql
   port = 3306
   user = root
   pass = root
